[package]
name = "rust-gecko"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords=["coingecko", "gecko", "client"]
categories = ["accessibility", "api-bindings"]
description = "Rust client for CoinGecko API"
repository = "https://github.com/nzx9/rust-gecko"
homepage = "https://nzx9.github.io/rust-gecko/"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.137", features= ["derive"]}
serde_json = "1.0.81"